[package]
name = "sros"
version = "0.1.0"
edition = "2021"

# The profile used for `cargo build`.
[profile.dev]
panic = "abort" # Disable stack unwinding on panic.

# The profile used for `cargo build --release`.
[profile.release]
panic = "abort" # Disable stack unwinding on panic.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
